<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundDark"
    tools:context="ca.ualberta_ecocar.ecocar.ChooseCarFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_car_text"
        android:textColor="#FFFFFF"
        android:fontFamily="sans-serif-thin"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="30sp"
        android:paddingTop="30sp"
        android:id="@+id/ChooseCarText"/>


    <Button
        android:text="@string/alice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="25dp"
        android:paddingLeft="25dp"
        android:background="@drawable/rounded_corner_button_background"
        android:textColor="#FFFFFF"
        android:fontFamily="sans-serif-thin"
        android:id="@+id/AliceButton"
        android:layout_below="@+id/ChooseCarText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:textSize="25sp" />

    <Button
        android:text="@string/prototype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_button_background"
        android:textColor="#FFFFFF"
        android:fontFamily="sans-serif-thin"
        android:paddingRight="25dp"
        android:paddingLeft="25dp"
        android:id="@+id/PrototypeButton"
        android:textSize="25sp"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/AliceButton"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
