<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_welcome_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundDark"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.ualberta_ecocar.ecocar.GeneralMenuWelcomeScreenFragment">

    <ImageView
        android:id="@+id/WelcomeLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_ecocar_logo"
        android:cropToPadding="false"
        android:scaleType="fitStart"
        android:paddingTop="50dp"
        android:adjustViewBounds="true" />

    <TextView
        android:text="@string/launch_control"
        android:id="@+id/LaunchControlText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#FFFFFF"
        android:fontFamily="sans-serif-thin"
        android:layout_below="@+id/WelcomeLogo"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"/>

    <Button
        android:text="@string/ImACarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="25dp"
        android:paddingLeft="25dp"
        android:background="@drawable/rounded_corner_button_background"
        android:textColor="#FFFFFF"
        android:fontFamily="sans-serif-thin"
        android:id="@+id/ImACar"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/LaunchControlText"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />

    <Button
        android:text="@string/ImATeamMemberButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_button_background"
        android:textColor="#FFFFFF"
        android:fontFamily="sans-serif-thin"
        android:paddingRight="25dp"
        android:paddingLeft="25dp"
        android:id="@+id/ImATeamMember"
        android:textSize="20sp"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/ImACar"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
